--- a/Demo.html
+++ b/Demo.html
@@ -6,19 +6,79 @@
     <title>HTML Basic</title>
 </head>
 <body>
-    <h1>Hello Hi , code with Uttam</h1>
+    <!-- <h1>Hello Hi , code with Uttam</h1>
     <h2>Hello hi, code with uttam</h2>
     <h3>Hello hi, code with uttam</h3>
     <h4>Hello hi, code with uttam</h4>
     <h5>Hello hi, code with uttam</h5>
     <h6>Hello hi, code with uttam</h6>
-    <br />
+    <br /> -->
     <hr>
     <strong><h2>Paragraph</h2></strong>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ducimus, sit illo expedita esse repudiandae inventore. Dignissimos animi assumenda corrupti optio corporis labore porro architecto officia quos, vero hic adipisci.
     </p>
     <a href="https://www.pexels.com/">Pexels</a>
-    <img src = "https://images.pexels.com/photos/29651657/pexels-photo-29651657/free-photo-of-ancient-temple-architecture-in-patan-nepal.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image" width="600" height="600" />
+    <!-- <img src = "https://images.pexels.com/photos/29651657/pexels-photo-29651657/free-photo-of-ancient-temple-architecture-in-patan-nepal.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image" width="600" height="600" /> -->
+    <!---
     <p style="color: rgb(115, 189, 73);">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ducimus, sit illo expedita esse repudiandae inventore. Dignissimos animi assumenda corrupti optio corporis labore porro architecto officia quos, vero hic adipisci.
-</body>
+   <i> <p>
+    <strong>
+        <mark>Ravi</mark>Uttam
+    </strong> ipsum dolor sit amet consectetur adipisicing elit. Libero quam dolores perspiciatis necessitatibus nisi cupiditate ut quasi dignissimos fugiat maxime voluptates iusto nostrum, voluptatibus odit, totam explicabo ipsam architecto. Quis.
+    </p>
+      ---->
+
+      <!-- <ul>
+        <li>Milk</li>
+        <li>Tea</li>
+        <li>Shop</li>
+        <li>Toy</li>
+        <li>Fok</li>
+      </ul>
+
+
+      <dl>
+        <dd>Coffee</dd>
+        <dd>Black HOt drink</dd>
+        <dd>Milk</dd>
+        <dd>Coffee</dd> -->
+      <!-- </dl>
+
+      
+      <ul>
+        <li>Ornage</li>
+        <li>Apple</li>
+        <li>Banne</li>
+      </ul>
+      <ol>
+        <li>Ornage</li>
+        <li>Apple</li>
+        <li>Banne</li>
+        <li>Ornage</li>
+        <li>Apple</li>
+      </ol> -->
+      <p>Whether we're shaping the future of sustainability, or optimizing algorithms, or even exploring epidemiological studies, Google Research strives to continuously progress science, advance society, and improve the lives of billions of people.</p>
+     <h2>Impossible? Let’s see</h2>
+     <a href = "https://research.google/philosophy/">Google Research</a>
+     # block element
+
+     <!-- <address>56 Rajasthan Jaipur</address>
+     <article>Google's exploreCSR program is dedicated to fostering a more inclusive future for computing research by empowering students from historically marginalized groups (HMGs). Since 2018, exploreCSR has supported institutions in designing and hosting research-focused initiatives that build skills, community, and motivation to pursue computing research pathways.
+
+        We're excited to announce the final cycle of exploreCSR. This cycle is exclusively open to previous exploreCSR award recipients. We aim to build upon past successes to catalyze long-term, systemic change within university departments, creating a lasting legacy of inclusion and support for HMG students.
+        
+        </article> -->
+        <section>
+            <h2>Google's exploreCSR program is dedicated to fostering a more inclusive future for computing research by empowering students from historically marginalized groups (HMGs). Since 2018, exploreCSR has supported institutions in designing and hosting research-focused initiatives that build skills, community, and motivation to pursue computing research pathways.
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus aspernatur magnam cum quos, inventore eaque molestias id deleniti quo ducimus iusto tenetur fuga, ex quam repellat modi? Impedit, magni maiores?
+                </p>
+        </section>
+        <section>
+            <h2>Google's exploreCSR program is dedicated to fostering a more inclusive future for computing research by empowering students from historically marginalized groups (HMGs). Since 2018, exploreCSR has supported institutions in designing and hosting research-focused initiatives that build skills, community, and motivation to pursue computing research pathways.
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus aspernatur magnam cum quos, inventore eaque molestias id deleniti quo ducimus iusto tenetur fuga, ex quam repellat modi? Impedit, magni maiores?
+                </p>
+        </section>
+        <footer>©2025 Copyright, Wraptron Apptech LLP. All rights reserved.
+        </footer>
+    </body>
 </html>
